# -demo

./: Animation.cpp  Animator.cpp  Bone.cpp  CMakeLists.txt  Camera.cpp  MeshPainter.cpp  Model.cpp  Object.cpp  README.md  TriMesh.cpp  main.cpp
assets/: readme.md
exe/: readme.md
exe/shaders/: cubefshader.glsl  fshader.glsl  vshader.glsl
include/: Animation.h  Animator.h  Bone.h  Camera.h  MeshPainter.h  Model.h  Object.h  TriMesh.h
shaders/: fshader.glsl
